[package]
name = "pam_pwdfile_rs"
version = "0.2.1"
edition = "2024"
authors = [
  "Supernovatux <thulashitharan.d@gmail.com>",
  "LiAlH4qwq <lialh4qwq@outlook.com>"
]

[dependencies]
pamsm = {version = "*" ,features = ["libpam"] }
sha2 = "0.11.0"

[lib]
name = "pam_pwdfile_rs"
crate-type = ["cdylib"]

[profile.release]
debug = false
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = false
strip = "symbols"
