[package]
name = "pam_pwdfile_rs"
version = "0.2.1"
edition = "2024"
authors = [
  "Supernovatux <thulashitharan.d@gmail.com>",
  "LiAlH4qwq <lialh4qwq@outlook.com>"
]

[dependencies]
pamsm = {version = "*" ,features = ["libpam"] }
password-hash = "0.5"
yescrypt = "0.1.0-rc.5"

[lib]
name = "pam_pwdfile_rs"
crate-type = ["cdylib"]

[profile.release]
debug = false
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = false
strip = "symbols"
