[package]
name = "pam_pwdfile_rs"
version = "0.4.0"
edition = "2024"
authors = [
  "Supernovatux <thulashitharan.d@gmail.com>",
  "LiAlH4qwq <lialh4qwq@outlook.com>"
]

[dependencies]
pamsm = { version = "*", features = ["libpam"] }
yescrypt = "0.1.0-rc.5"
zeroize = "1"
uzers = "0.12"

[lib]
name = "pam_pwdfile_rs"
crate-type = ["cdylib"]

[[bin]]
name = "pam_pwdfile_rs_helper"
path = "src/helper.rs"

[profile.release]
debug = false
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = false
strip = "symbols"
